--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
               <!-- Кнопки фильтров по размеру будут добавлены через JavaScript -->
             </div>
           </div>
+          <div class="filter-group">
+            <label class="filter-label">Категория:</label>
+            <div class="filter-buttons" id="categoryFilters">
+              <!-- Кнопки фильтров по категории (например, Сумки) будут добавлены через JavaScript -->
+            </div>
+          </div>
         </div>
         <div class="catalog" id="catalog">
           <!-- Карточки товаров будут добавлены через JavaScript -->
@@ -59,7 +65,6 @@
         <span class="cart-count" id="fixedCartCount">0</span>
       </button>
     </div>
-
     <!-- Модальное окно товара -->
     <div class="modal" id="modal">
       <div class="modal-overlay" id="modalOverlay"></div>
