--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="header">
       <div class="container">
-        <h1 class="logo">Nike Tech Fleece</h1>
+        <h1 class="logo">madik__jewelry</h1>
         <p class="subtitle">Каталог одежды</p>
         <div class="header-actions">
           <button class="cart-btn" id="cartBtn" style="display: none">
@@ -28,11 +28,16 @@
         </div>
       </div>
     </header>
-
     <main class="main">
       <div class="container">
         <!-- Фильтры -->
         <div class="filters">
+          <div class="filter-group">
+            <label class="filter-label">Бренд:</label>
+            <div class="filter-buttons" id="brandFilters">
+              <!-- Кнопки брендов будут добавлены через JavaScript -->
+            </div>
+          </div>
           <div class="filter-group">
             <label class="filter-label">Цвет:</label>
             <div class="filter-buttons" id="colorFilters">
